# drupal-server/public/swagger.json
@@ -348,6 +348,16 @@
 								}
 							}
 						}
+					},
+					"429": {
+						"description": "Too many requests",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
+								}
+							}
+						}
 					}
 				},
 				"security": [],
